organization list bottom spacing fix (#6534)

--- a/ckanext/ozwillo_theme/fanstatic/ozwillo.css
+++ b/ckanext/ozwillo_theme/fanstatic/ozwillo.css
@@ -180,3 +180,7 @@ footer a.ext-twitter:after {
   height: 18px;
   background: url('/img/twitter.png') no-repeat top 3px left 0;
 }
+
+li.media-item {
+    margin-bottom:10px;
+}
